--- a/Views/Inquilino/Editar.cshtml
+++ b/Views/Inquilino/Editar.cshtml
@@ -45,7 +45,7 @@
                 </div>
 
         </form>
-        <div class="form-group-spacing">
+        <div class="form-group-spacing volver">
             <a asp-action="Index" title="Volver">
                 <i class="fa-solid fa-undo"></i>
             </a>
