--- a/Views/Inmueble/Editar.cshtml
+++ b/Views/Inmueble/Editar.cshtml
@@ -18,11 +18,13 @@
                     <select asp-for="Uso" class="form-control" asp-items="ViewBag.Usos"></select>
                     <span asp-validation-for="Uso" class="text-danger"></span>
                 </div>
+
                 <div class="form-group col-md-6 form-group-spacing">
                     <label asp-for="Direccion" class="control-label"></label>
                     <input asp-for="Direccion" class="form-control">
                     <span asp-validation-for="Direccion" class="text-danger"></span>
                 </div>
+
                 <div class="form-group col-md-6 form-group-spacing">
                     <label class="control-label">Tipo de inmueble</label>
                     <div class="input-group">
@@ -41,55 +43,60 @@
                     </div>
                     <span asp-validation-for="TipoId" class="text-danger"></span>
                 </div>
+
                 <div class="form-group col-md-6 form-group-spacing">
-                    <span asp-validation-for="TipoId" class="text-danger"></span>
-                    <div class="form-group col-md-6 form-group-spacing">
-                        <label asp-for="Ambientes" class="control-label"></label>
-                        <input asp-for="Ambientes" class="form-control">
-                        <span asp-validation-for="Ambientes" class="text-danger"></span>
-                    </div>
-                    <div class="form-group col-md-6 form-group-spacing">
-                        <label asp-for="Latitud" class="control-label"></label>
-                        <input asp-for="Latitud" class="form-control" />
-                        <span asp-validation-for="Latitud" class="text-danger"></span>
-                    </div>
-                    <div class="form-group col-md-6 form-group-spacing">
-                        <label asp-for="Longitud" class="control-label"></label>
-                        <input asp-for="Longitud" class="form-control" />
-                        <span asp-validation-for="Longitud" class="text-danger"></span>
-                    </div>
-                    <div class="form-group col-md-6 form-group-spacing">
-                        <label asp-for="Superficie" class="control-label"></label>
-                        <input asp-for="Superficie" class="form-control" />
-                        <span asp-validation-for="Superficie" class="text-danger"></span>
-                    </div>
-                    <div class="form-group col-md-6 form-group-spacing">
-                        <label asp-for="Precio" class="control-label"></label>
-                        <input asp-for="Precio" class="form-control">
-                        <span asp-validation-for="Precio" class="text-danger"></span>
-                    </div>
+                    <label asp-for="Ambientes" class="control-label"></label>
+                    <input asp-for="Ambientes" class="form-control">
+                    <span asp-validation-for="Ambientes" class="text-danger"></span>
+                </div>
 
-                    <div class="row">
-                        <div class="form-group col-md-6 form-group-spacing">
-                            <label class="control-label">Propietario</label>
-                            <select asp-for="IdPropietario" class="form-control" asp-items="ViewBag.Propietario"
-                                id="propietarioSelect">
-                            </select>
-                            <span asp-validation-for="IdPropietario" class="text-danger"></span>
-                        </div>
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Latitud" class="control-label"></label>
+                    <input asp-for="Latitud" class="form-control" />
+                    <span asp-validation-for="Latitud" class="text-danger"></span>
+                </div>
+
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Longitud" class="control-label"></label>
+                    <input asp-for="Longitud" class="form-control" />
+                    <span asp-validation-for="Longitud" class="text-danger"></span>
+                </div>
+
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Superficie" class="control-label"></label>
+                    <input asp-for="Superficie" class="form-control" />
+                    <span asp-validation-for="Superficie" class="text-danger"></span>
+                </div>
+
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Precio" class="control-label"></label>
+                    <input asp-for="Precio" class="form-control">
+                    <span asp-validation-for="Precio" class="text-danger"></span>
+                </div>
+
+                <div class="row">
+                    <div class="form-group col-md-6 form-group-spacing">
+                        <label class="control-label">Propietario</label>
+                        <select asp-for="IdPropietario" class="form-control" asp-items="ViewBag.Propietario"
+                            id="propietarioSelect">
+                        </select>
+                        <span asp-validation-for="IdPropietario" class="text-danger"></span>
                     </div>
+                </div>
 
-                    <div class="row">
-                        <div class="form-group col-md-6 form-group-spacing">
-                            <input type="submit" value="Guardar" class="btn btn-success" />
+                <div class="row">
+                    <div class="form-group col-md-6 form-group-spacing">
+                        <input type="submit" value="Guardar" class="btn btn-success" />
 
-                        </div>
                     </div>
-
+                </div>
         </form>
-        <div class="volver">
-
+        <div class="form-group-spacing volver">
+            <a asp-action="Index" title="Volver">
+                <i class="fa-solid fa-undo"></i>
+            </a>
         </div>
+
     </div>
 
     <!-- Modal para Modificar Tipo de Inmueble -->
