--- a/Views/Pago/Index.cshtml
+++ b/Views/Pago/Index.cshtml
@@ -1,11 +1,14 @@
-@model IEnumerable<inmobiliaria_AT.Models.Pago>
+@*@model IEnumerable<inmobiliaria_AT.Models.Pago>
+@Html.Partial("Nuevo", new inmobiliaria_AT.Models.Pago())
+
 @{
-    ViewData["Title"] = "Pagos";
+    ViewData["Title"] = "Pago";
 
 }
 <div class="text-center">
     <h1 class="display-4">Listado de pagos</h1>
 </div>
+
 <table class="table">
     <thead>
         <th>
@@ -65,14 +68,12 @@
 
                     </td>
 
-                    @*--------ICONOS PARA Nuevo, DETALLE Y ELIMINAR -------------*@
+                    @*--------ICONOS PARA Nuevo, DETALLE Y ELIMINAR -------------
                     <td>
-                        <a href="/Pago/Nuevo/@item.Id"></a>
-                        <form action="@Url.Action("Nuevo", new{id=item.Id})" method="get" style="display: inline;">
-                            <button type="submit" class="btn btn-warning btn-custom" title="Nuevo">
-                                <i class="fa-solid fa-pen"></i>
-                            </button>
-                        </form>
+                        <button type="button" class="btn btn-warning btn-custom" title="Nuevo"
+                            onclick="abrirModalNuevo(@item.Contrato.Id)">
+                            <i class="fa-solid fa-pen"></i>
+                        </button>
 
                         <a href="/Pago/Detalle/@item.Id"></a>
                         <form action="@Url.Action("Detalle", new{id=item.Id})" method="get" style="display: inline;">
@@ -100,7 +101,7 @@
     </tbody>
 
 </table>
-
+@*
 <div class="modal fade" id="modal_eliminar_pago" tabindex="-1" aria-labelledby="modal_eliminar_pagoLabel"
     aria-hidden="true">
     <div class="modal-dialog">
@@ -146,6 +147,8 @@
 }
 
 @section Scripts {
+
+
     <script>
         $(document).ready(function () {
             // Muestro el modal de éxito si existe un mensaje en TempData
@@ -158,10 +161,114 @@
             }
         });
 
+        function abrirModalNuevo() {
+
+            $('#paymentModal').modal('show');
+        }
+
         function eliminar(id, fecha, direccion, Monto, tipo, plazo) {
             document.querySelector("#pago_eliminar_id").value = id;
             document.querySelector("#pago_eliminar_fecha").innerText = "Fecha: " + fecha;
             document.querySelector("#pago_eliminar_direccion").innerText = "direccion: " + direccion;
+            document.querySelector("#pago_eliminar_monto").innerText = "Monto: " + Monto;
+            $("#modal_eliminar_pago").modal("show");
+        }
+    </script>
+}
+
+*@
+
+
+@model IEnumerable<inmobiliaria_AT.Models.Pago>
+
+@{
+    ViewData["Title"] = "Pago";
+}
+
+<div class="text-center">
+    <h1 class="display-4">Listado de pagos</h1>
+</div>
+
+<!-- Botón para agregar nuevo pago -->
+<button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#paymentModal">
+    <i class="fa-solid fa-plus"></i> Nuevo Pago
+</button>
+
+<table class="table">
+    <thead>
+        <th>Código</th>
+        <th>Fecha</th>
+        <th>Inmueble</th>
+        <th>Monto</th>
+        <th>@Html.DisplayNameFor(model => model.FirstOrDefault().Concepto)</th>
+    </thead>
+    <tbody>
+        @if (Model == null || !Model.Any())
+        {
+            <tr>
+                <td colspan="6" class="text-center">No se encontraron Pagos.</td>
+            </tr>
+        }
+        else
+        {
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>@item.Fecha</td>
+                    <td>@item.Contrato.Inmu.Direccion</td>
+                    <td>@item.Monto</td>
+                    <td>@item.Concepto.Nombre</td>
+                    <td>
+                        <!-- Botones de acciones (detalle, eliminar) -->
+                        <a href="/Pago/Detalle/@item.Id" class="btn btn-info">Detalles</a>
+                        <button type="button" class="btn btn-danger"
+                            onclick="eliminar(@item.Id, '@item.Fecha', '@item.Contrato.Inmu.Direccion', '@item.Monto', '@item.Concepto.Nombre')">
+                            Eliminar
+                        </button>
+                    </td>
+                </tr>
+            }
+        }
+    </tbody>
+</table>
+
+<!-- Modal para nuevo pago -->
+@Html.Partial("Nuevo", new inmobiliaria_AT.Models.Pago())
+
+
+<div class="modal fade" id="modal_eliminar_pago" tabindex="-1" aria-labelledby="modal_eliminar_pagoLabel" aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal_eliminar_pagoLabel">Confirmar Eliminación</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form method="post" asp-action="Eliminar" id="form_eliminar_pago">
+                <div class="modal-body">
+                    <input type="hidden" name="Id" value="" id="pago_eliminar_id">
+                    <p>
+                        <span id="pago_eliminar_fecha"></span><br>
+                        <span id="pago_eliminar_direccion"></span><br>
+                        <span id="pago_eliminar_monto"></span><br>
+                        <span id="pago_eliminar_concepto"></span><br>
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-danger">Confirmar</button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        function eliminar(id, fecha, direccion, Monto, tipo, plazo) {
+            document.querySelector("#pago_eliminar_id").value = id;
+            document.querySelector("#pago_eliminar_fecha").innerText = "Fecha: " + fecha;
+            document.querySelector("#pago_eliminar_direccion").innerText = "Dirección: " + direccion;
             document.querySelector("#pago_eliminar_monto").innerText = "Monto: " + Monto;
             $("#modal_eliminar_pago").modal("show");
         }
