--- a/Views/Pago/Nuevo.cshtml
+++ b/Views/Pago/Nuevo.cshtml
@@ -1,8 +1,85 @@
-@model inmobiliaria_AT.Models.Pago
+@*model inmobiliaria_AT.Models.Pago
 @{
-    ViewData["Title"] = "Pagos";
+ViewData["Title"] = "Pagos";
 int id = Model == null ? 0 : Model.Id; // SE ASIGNA O NO EL ID DE LA PROPIEDAD, SI SE ENVIA
 }
+<div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">
+<h5 class="modal-title" id="paymentModalLabel">Nuevo Pago</h5>
+<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+</div>
+<div class="modal-body">
+
+<h4>Nuevo pago</h4>
+
+<div class="row">
+<div class="col-md-12">
+<form action="Guardar">
+
+<div asp-asp-validation-summary="ModelOnly" class="text-danger"></div>
+<input type="hidden" name="Id" value="@id">
+<div class="row ">
+<div class="form-group col-md-6 form-group-spacing">
+<label asp-for="Fecha" class="control-label"></label>
+<input readonly asp-for="Fecha" class="form-control">
+<span asp-validation-for="Fecha" class="text-danger"></span>
+</div>
+<div class="form-group col-md-6 form-group-spacing">
+<label asp-for="Monto" class="control-label"></label>
+<input asp-for="Monto" class="form-control">
+<span asp-validation-for="Monto" class="text-danger"></span>
+</div>
+</div>
+<div class="row ">
+<div class="form-group col-md-6 form-group-spacing">
+<label asp-for="Contrato" class="control-label"></label>
+<select asp-for="Contrato.Id" class="form-control"
+asp-items="ViewBag.Contrato"></select>
+@*CON EL VIEWVAG RECIBO LOS DATOS DE LOS CONTRATOS
+<span asp-validation-for="Contrato" class="text-danger"></span>
+</div>
+<div class="form-group col-md-6 form-group-spacing">
+<label asp-for="Detalle" class="control-label"></label>
+<input asp-for="Detalle" class="form-control">
+<span asp-validation-for="Detalle" class="text-danger"></span>
+</div>
+</div>
+<div class="row ">
+<div class="form-group col-md-6 form-group-spacing">
+<label asp-for="Concepto" class="control-label"></label>
+<select asp-for="Concepto" class="form-control"
+asp-items="ViewBag.Concepto"></select>
+<span asp-validation-for="Concepto" class="text-danger"></span>
+</div>
+
+</div>
+<div>
+<div class="form-group col-md-6 form-group-spacing">
+<input type="submit" value="Guardar" class="btn btn-success" />
+</div>
+</form>
+<div class="form-group-spacing">
+<a asp-action="Index" title="Volver">
+<i class="fa-solid fa-undo"></i>
+</a>
+</div>
+
+</div>
+</div>
+
+</div>
+<div class="modal-footer">
+<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+</div>
+</div>
+@* </div>
+*@
+
+
+@model inmobiliaria_AT.Models.Pago
+
 <div class="modal fade" id="paymentModal" tabindex="-1" aria-labelledby="paymentModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -11,67 +88,62 @@ int id = Model == null ? 0 : Model.Id; // SE ASIGNA O NO EL ID DE LA PROPIEDAD, 
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-
                 <h4>Nuevo pago</h4>
+                <form action="@Url.Action("Nuevo", "Pago")" method="post">
+                    <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                    <input type="hidden" name="Id" value="0">
+                    <div class="row">
+                        <div class="form-group col-md-6 form-group-spacing">
+                            <label for="Fecha" class="control-label">Fecha</label>
+                            <input readonly type="date" id="Fecha" name="Fecha" class="form-control">
+                        </div>
+                        <div class="form-group col-md-6 form-group-spacing">
+                            <label for="Monto" class="control-label">Monto</label>
+                            <input type="number" id="Monto" name="Monto" class="form-control">
+                        </div>
+                    </div>
+                    <div class="row">
 
-                <div class="row">
-                    <div class="col-md-12">
-                        <form action="Guardar">
-
-                            <div asp-asp-validation-summary="ModelOnly" class="text-danger"></div>
-                            <input type="hidden" name="Id" value="@id">
-                            <div class="row ">
-                                <div class="form-group col-md-6 form-group-spacing">
-                                    <label asp-for="Fecha" class="control-label"></label>
-                                    <input readonly asp-for="Fecha" class="form-control">
-                                    <span asp-validation-for="Fecha" class="text-danger"></span>
-                                </div>
-                                <div class="form-group col-md-6 form-group-spacing">
-                                    <label asp-for="Monto" class="control-label"></label>
-                                    <input asp-for="Monto" class="form-control">
-                                    <span asp-validation-for="Monto" class="text-danger"></span>
-                                </div>
-                            </div>
-                            <div class="row ">
-                                <div class="form-group col-md-6 form-group-spacing">
-                                    <label asp-for="Contrato" class="control-label"></label>
-                                    <select asp-for="Contrato.Id" class="form-control"
-                                        asp-items="ViewBag.Contrato"></select>
-                                    @*CON EL VIEWVAG RECIBO LOS DATOS DE LOS CONTRATOS*@
-                                    <span asp-validation-for="Contrato" class="text-danger"></span>
-                                </div>
-                                <div class="form-group col-md-6 form-group-spacing">
-                                    <label asp-for="Detalle" class="control-label"></label>
-                                    <input asp-for="Detalle" class="form-control">
-                                    <span asp-validation-for="Detalle" class="text-danger"></span>
-                                </div>
-                            </div>
-                            <div class="row ">
-                                <div class="form-group col-md-6 form-group-spacing">
-                                    <label asp-for="Concepto" class="control-label"></label>
-                                    <select asp-for="Concepto" class="form-control"
-                                        asp-items="ViewBag.Concepto"></select>
-                                    <span asp-validation-for="Concepto" class="text-danger"></span>
-                                </div>
-
-                            </div>
-                            <div>
-                                <div class="form-group col-md-6 form-group-spacing">
-                                    <input type="submit" value="Guardar" class="btn btn-success" />
-                                </div>
-                        </form>
-                        <div class="form-group-spacing">
-                            <a asp-action="Index" title="Volver">
-                                <i class="fa-solid fa-undo"></i>
-                            </a>
+                        <div class="form-group col-md-6 form-group-spacing">
+                            <label asp-for="Contrato.Id" class="control-label">Contrato</label>
+                            <select asp-for="Contrato.Id" class="form-control" asp-items="ViewBag.Contrato"></select>
+                            <span asp-validation-for="Contrato.Id" class="text-danger"></span>
                         </div>
 
-                    </div>
-                </div>
+                        <div class="form-group col-md-6 form-group-spacing">
+                            <label asp-for="Concepto.Id" class="control-label">Concepto</label>
+                            <select asp-for="Concepto.Id" class="form-control" asp-items="ViewBag.Concepto"></select>
+                            <span asp-validation-for="Concepto.Id" class="text-danger"></span>
+                        </div>
 
+
+
+                    </div>
+                    <div class="row">
+
+                        <div class="form-group col-md-12 form-group-spacing">
+                            <label for="Detalle" class="control-label">Detalle</label>
+                            <input type="text" id="Detalle" name="Detalle" class="form-control">
+                        </div>
+                    </div>
+                    <div class="form-group col-md-6 form-group-spacing">
+                        <input type="submit" value="Guardar" class="btn btn-success" />
+                    </div>
+                </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+                <script>
+                    document.addEventListener('DOMContentLoaded', (event) => {
+                        const dateInput = document.getElementById('Fecha');
+                        const today = new Date().toISOString().split('T')[0];
+                        dateInput.value = today;
+                    });
+
+
+                    
+                </script>
             </div>
         </div>
     </div>
+</div>
