--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -30,11 +30,21 @@
                                 data-bs-toggle="dropdown" aria-expanded="false">Contratos</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Contrato"
-                                        asp-action="Editar">Crear contrato</a></li>
+                                        asp-action="Index">Principal</a></li>
                                 <li><a class="dropdown-item" asp-area="" asp-controller="Contrato"
-                                        asp-action="Detalle">Detalle</a></li>
-                                <li><a class="dropdown-item" asp-area="" asp-controller="Contrato"
-                                        asp-action="Index">Lista de Contratos</a></li>
+                                        asp-action="Editar">Nuevo contrato</a></li>
+
+
+                            </ul>
+                        </li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle text-dark" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">Pagos</a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Pago"
+                                        asp-action="Index">Principal</a></li>
+                                <li><a class="dropdown-item" asp-area="" asp-controller="Pago" data-bs-toggle="modal"
+                                        data-bs-target="#paymentModal">Nuevo Pago</a></li>
                             </ul>
                         </li>
                         <li class="nav-item dropdown">
@@ -112,6 +122,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
+
+
         <div class="container">
             &copy; 2024 - Inmobiliaria AT - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
