cambios en inmueble

--- a/Views/Inmueble/Index.cshtml
+++ b/Views/Inmueble/Index.cshtml
@@ -3,8 +3,16 @@
     ViewData["Title"] = "Lista de Inmuebles";
 }
 <div class="text-center">
-    <h1 class="display-4">Lista de Inmuebles</h1>
+    <h1>Inmuebles</h1>
 </div>
+
+<p>
+    <button type="button" class="btn btn-ligth">
+        <a href="/Inmueble/Editar" title="Agregar Inmueble">
+            <i class="fa-duotone fa-solid fa-plus"></i>
+        </a>
+    </button>
+</p>
 <table class="table text-center">
     <thead>
         <th>
@@ -70,11 +78,7 @@
             </tr>
         }
         <td>
-            <button type="button" class="btn btn-ligth">
-                <a href="/Inmueble/Editar" title="Agregar Inmueble">
-                    <i class="fa-duotone fa-solid fa-plus"></i>
-                </a>
-            </button>
+
         </td>
     </tbody>
 </table>
