--- a/Views/Usuario/Editar.cshtml
+++ b/Views/Usuario/Editar.cshtml
@@ -1,71 +1,71 @@
 @model inmobiliaria_AT.Models.Usuario
 
-<h1>@ViewBag.Title</h1>
+@{
+    ViewData["Title"] = "Editar Usuario";
+    int id = Model == null ? 0 : Model.Id;
+    bool isAdmin = User.IsInRole("Administrador");
+}
 
-<h4>Usuario</h4>
+<h2>Editar Usuario</h2>
 <hr />
 <div class="row">
-    <div class="col-md-4">
-        <form asp-action="Editar">
+    <div class="col-md-12">
+        <form asp-action="Editar" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
+                <input type="hidden" name="Id" value="@id" />
             </div>
-            <div class="form-group">
-                <label asp-for="Nombre" class="control-label"></label>
-                <input asp-for="Nombre" class="form-control" />
-                <span asp-validation-for="Nombre" class="text-danger"></span>
+            <div class="row">
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Nombre" class="control-label"></label>
+                    <input asp-for="Nombre" class="form-control" />
+                    <span asp-validation-for="Nombre" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Apellido" class="control-label"></label>
+                    <input asp-for="Apellido" class="form-control" />
+                    <span asp-validation-for="Apellido" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Apellido" class="control-label"></label>
-                <input asp-for="Apellido" class="form-control" />
-                <span asp-validation-for="Apellido" class="text-danger"></span>
+            <div class="row">
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="Email" class="control-label"></label>
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+                <div class="form-group col-md-6 form-group-spacing">
+                    <label asp-for="PasswordHash" class="control-label"></label>
+                    <input asp-for="PasswordHash" type="password" class="form-control" />
+                    <span asp-validation-for="PasswordHash" class="text-danger"></span>
+                </div>
             </div>
-            <div class="form-group">
-                <label asp-for="Email" class="control-label"></label>
-                <input asp-for="Email" class="form-control" />
-                <span asp-validation-for="Email" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PasswordHash" class="control-label"></label>
-                <input asp-for="PasswordHash" class="form-control" />
-                <span asp-validation-for="PasswordHash" class="text-danger"></span>
-            </div>
-            @if (User.IsInRole("Administrador") || User.IsInRole("SuperAdministrador"))
-            {
-                <div class="form-group">
+            @* @if (isAdmin)
+            { *@
+            <div class="row">
+                <div class="form-group col-md-6 form-group-spacing">
                     <label class="control-label">Rol</label>
-                    <select class="form-control" name="Rol">
-                        @* @foreach (var kvp in (IDictionary<int, string>)ViewBag.Roles)
-                    {
-                    // @:<option @(kvp.Key == Model.Rol ? "selected" : "") value="@kvp.Key">@kvp.Value</option>
-                    } *@
+                    <select asp-for="Rol" class="form-control" asp-items="ViewBag.Roles">
+                        <option value="">Seleccione un rol</option>
                     </select>
                     <span asp-validation-for="Rol" class="text-danger"></span>
                 </div>
-            }
-            <div class="form-group">
-                <label asp-for="Avatar" class="control-label"></label><br />
-                @if (Model.Avatar != "")
-                {
-                    <img src="@Model.Avatar" />
-                }
-                else
-                {
-                    <p>Sin avatar</p>
-                }
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            @* } *@
+            <div class="row">
+                @Html.Partial("_AvatarPartial", Model)
+            </div>
+            <div class="row">
+                <div class="form-group col-md-6 form-group-spacing">
+                    <input type="submit" value="Guardar" class="btn btn-success" />
+                </div>
             </div>
         </form>
+        <div class="form-group-spacing volver">
+            <a asp-action="Index" title="Volver">
+                <i class="fa-solid fa-undo"></i>
+            </a>
+        </div>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
@@ -73,8 +73,8 @@
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
 }
-@section Styles {
-    <!--Posible estilo aplicable solo a esta página-->
-    <!--esta sección se renderiza en el layout donde dice RenderSection("Styles", false)-->
-    <!--<link href="~/css/forms.css" rel="stylesheet" />-->
-}
+@* @section Styles {
+<!--Posible estilo aplicable solo a esta página-->
+<!--esta sección se renderiza en el layout donde dice RenderSection("Styles", false)-->
+<!--<link href="~/css/forms.css" rel="stylesheet" />-->
+} *@
