--- a/Views/Usuario/Index.cshtml
+++ b/Views/Usuario/Index.cshtml
@@ -4,17 +4,24 @@
     ViewData["Title"] = "Index";
     var rnd = new Random();
 }
+<div class="text-center">
+    <h1>Usuarios</h1>
+</div>
 
-<h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <button type="button" class="btn btn-ligth">
+        <a href="/Usuario/Crear" title="Agregar Usuario">
+            <i class="fa-duotone fa-solid fa-plus"></i>
+        </a>
+    </button>
 </p>
-<table class="table">
+<table class="table text-center">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Id)
+                Código
+                @* @Html.DisplayNameFor(model => model.Id) *@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Nombre)
@@ -29,7 +36,8 @@
                 @Html.DisplayNameFor(model => model.Avatar)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RolNombre)
+                Rol
+                @* @Html.DisplayNameFor(model => model.RolNombre) *@
             </th>
             <th></th>
         </tr>
@@ -65,13 +73,62 @@
                 <td>
                     @Html.DisplayFor(modelItem => item.RolNombre)
                 </td>
+                @* @if (User.IsInRole("Administrador"))
+            { *@
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id" title="Editar"><span
-                            class="lnr lnr-pencil"></span></a>&nbsp;
-                    <a asp-action="Eliminar" asp-route-id="@item.Id" title="Eliminar"><span
-                            class="lnr lnr-cross"></span></a>
+                    <a href="/Usuario/Editar/@item.Id"></a>
+                    <form action="@Url.Action("Editar", new{id=item.Id})" method="get" style="display: inline;">
+                        <button type="submit" class="btn btn-warning btn-custom" title="Editar">
+                            <i class="fa-solid fa-pen"></i>
+                        </button>
+                    </form>
+                    <a href="/Usuario/Detalle/@item.Id"></a>
+                    <form action="@Url.Action("Detalle", new{id=item.Id})" method="get" style="display: inline;">
+                        <button type="submit" class="btn btn-info btn-custom" title="Detalles">
+                            <i class="fa-solid fa-circle-info"></i>
+                        </button>
+                    </form>
+                    <button type="submit" class="btn btn-danger btn-custom"
+                        onclick="eliminar(@item.Id, `@item.Nombre`, `@item.Apellido`)" title="Eliminar">
+                        <i class="fas fa-trash"></i>
+                    </button>
                 </td>
+                @* } *@
             </tr>
         }
     </tbody>
 </table>
+
+<div class="modal fade" id="modal_eliminar_usuario" tabindex="-1" aria-labelledby="modal_eliminar_usuarioLabel"
+    aria-hidden="true">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="modal_eliminar_usuarioLabel">Confirmar Eliminación</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <form method="post" asp-action="Eliminar" id="form_usuario_inmueble">
+                <div class="modal-body">
+                    <input type="hidden" name="Id" value="" id="usuario_eliminar_id">
+                    <p>Usuario: <span id="usuario_eliminar_nombre"></span> <span id="usuario_eliminar_apellido"></span>
+                    </p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                    <button type="submit" class="btn btn-danger"> Confirmar</i></button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
+
+@section Scripts {
+    <script>
+        function eliminar(id, nombre, apellido) {
+            document.querySelector("#usuario_eliminar_id").value = id;
+            document.querySelector("#usuario_eliminar_nombre").innerText = nombre + ", ";
+            document.querySelector("#usuario_eliminar_apellido").innerText = apellido;
+            $("#modal_eliminar_usuario").modal("show");
+        }
+    </script>
+}
