cambios inquilino y propietario

--- a/Views/Propietario/Buscar.cshtml
+++ b/Views/Propietario/Buscar.cshtml
@@ -1,10 +1,10 @@
 @model IEnumerable<inmobiliaria_AT.Models.Inmueble>
 
 @{
-    ViewData["Title"] = "BuscarPropietario";
+    ViewData["Title"] = "Buscar Propietario";
 }
 
-<h1>Busqueda</h1>
+<h2>Buscar por propietario</h2>
 
 <h4>Propietario</h4>
 <hr />
