--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,6 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">¡Bienvenidos!</h1>      
-     <img src="~/inmobiliaria.jpg" alt="Imagen de Inmobiliaria" class="img-fluid"> 
+    <h1 class=>¡Bienvenidos!</h1>
+    <img src="~/inmobiliaria.jpg" alt="Imagen de Inmobiliaria" class="img-fluid">
 </div>
