--- a/Views/Inquilino/Index.cshtml
+++ b/Views/Inquilino/Index.cshtml
@@ -3,8 +3,15 @@
     ViewData["Title"] = "Listado de Inquilinos";
 }
 <div class="text-center">
-    <h1 class="display-4">Lista de Inquilinos</h1>
+    <h1>Inquilinos</h1>
 </div>
+<p>
+    <button type="button" class="btn btn-ligth">
+        <a href="/Inquilino/Editar" title="Agregar Inquilino">
+            <i class="fa-duotone fa-solid fa-plus"></i>
+        </a>
+    </button>
+</p>
 <table class="table text-center">
     <thead>
         <th>
@@ -51,11 +58,7 @@
             </tr>
         }
         <td>
-            <button type="button" class="btn btn-ligth">
-                <a href="/Inquilino/Editar" title="Agregar Inquilino">
-                    <i class="fa-duotone fa-solid fa-plus"></i>
-                </a>
-            </button>
+
         </td>
     </tbody>
 </table>
