--- a/Views/Propietario/Index.cshtml
+++ b/Views/Propietario/Index.cshtml
@@ -3,9 +3,15 @@
     ViewData["Title"] = "Listado de Propietarios";
 }
 <div class="text-center">
-    <h1 class="display-4">Lista de Propietarios</h1>
+    <h1>Propietarios</h1>
 </div>
-
+<p>
+    <button type="button" class="btn btn-ligth">
+        <a href="/Propietario/Editar" title="Agregar Propietario">
+            <i class="fa-duotone fa-solid fa-plus"></i>
+        </a>
+    </button>
+</p>
 <table class="table text-center">
     <thead>
         <th>
@@ -54,11 +60,7 @@
         }
 
         <td>
-            <button type="button" class="btn btn-ligth">
-                <a href="/Propietario/Editar" title="Agregar Propietario">
-                    <i class="fa-duotone fa-solid fa-plus"></i>
-                </a>
-            </button>
+
         </td>
     </tbody>
 </table>
