--- a/Views/Contrato/index.cshtml
+++ b/Views/Contrato/index.cshtml
@@ -96,6 +96,13 @@
                             title="Eliminar">
                             <i class="fas fa-trash"></i>
                         </button>
+
+                        
+                        <button type="button" class="btn btn-success btn-custom" data-bs-toggle="modal"
+                            data-bs-target="#paymentModal" data-id="@item.Id" title="Comprar">
+                            <i class="fa-solid fa-dollar-sign"></i>
+                        </button>
+
                     </td>
                 </tr>
             }
