--- a/Views/Pago/Index.cshtml
+++ b/Views/Pago/Index.cshtml
@@ -216,7 +216,7 @@
                 <tr>
                     <td>@item.Id</td>
                     <td>@item.Fecha</td>
-                    <td>@item.Contrato.Inmu.Direccion</td>
+                    <td>@item.DireccionContrato</td>
                     <td>@item.Monto</td>
                     <td>@item.Concepto.Nombre</td>
                     <td>
